Dinamik gişe ve tarife sistemi eklendi