@@ -3,8 +3,7 @@ package com.hgs.backend.service;
 import com.hgs.backend.dto.TransactionRequest;
 import com.hgs.backend.dto.TransactionResponse;
 import com.hgs.backend.exception.InsufficientBalanceException;
-import com.hgs.backend.model.Transaction;
-import com.hgs.backend.model.Vehicle;
+import com.hgs.backend.model.*;
 import com.hgs.backend.repository.TransactionRepository;
 import com.hgs.backend.util.TransactionHelper;
 import jakarta.transaction.Transactional;
@@ -12,7 +11,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -21,20 +19,25 @@ public class TransactionService {
     private final TransactionRepository transactionRepository;
     private final VehicleService vehicleService;
     private final TransactionHelper transactionHelper;
+    private final GateService gateService;
+    private final TariffService tariffService;
 
     @Transactional
     public TransactionResponse createTransaction(TransactionRequest request) {
         Vehicle vehicle = vehicleService.getVehicleEntity(request.getPlate());
+        Gate gate = gateService.getGateEntity(request.getGateId());
+        VehicleClass vehicleClass = vehicle.getVehicleClass();
+        Tariff tariff = tariffService.getTariffEntity(gate.getId(), vehicleClass.getId());
 
-        if (vehicle.getBalance() < request.getFee()) {
+        if (vehicle.getBalance().compareTo(tariff.getFee()) < 0) {
             throw new InsufficientBalanceException("Yetersiz Bakiye! Mevcut bakiye: "+vehicle.getBalance());
         }
 
-        vehicle.setBalance(vehicle.getBalance() - request.getFee());
-
+        vehicle.setBalance(vehicle.getBalance().subtract(tariff.getFee()));
         Transaction transaction = new Transaction();
-        transaction.setStationName(request.getStationName());
-        transaction.setFee(request.getFee());
+        transaction.setVehicleClass(vehicleClass);
+        transaction.setGate(gate);
+        transaction.setFee(tariff.getFee());
         transaction.setTransactionDate(LocalDateTime.now());
         transaction.setVehicle(vehicle);
 
@@ -43,10 +46,10 @@ public class TransactionService {
     }
 
     public List<TransactionResponse> getTransactionsByPlate(String plate) {
-        return transactionRepository.findByVehiclePlate(plate)
+        return transactionRepository.findByVehicle_PlateOrderByTransactionDateDesc(plate)
                 .stream()
                 .map(transactionHelper::convertToResponse)
-                .collect(Collectors.toList());
+                .toList();
 
     }
 
