@@ -5,14 +5,14 @@ import com.hgs.backend.dto.VehicleResponse;
 import com.hgs.backend.exception.VehicleAlreadyExistException;
 import com.hgs.backend.exception.VehicleNotFoundException;
 import com.hgs.backend.model.Vehicle;
+import com.hgs.backend.model.VehicleClass;
 import com.hgs.backend.repository.VehicleRepository;
 import com.hgs.backend.util.VehicleHelper;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-
+import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -20,15 +20,22 @@ public class VehicleService {
 
     private final VehicleRepository vehicleRepository;
     private final VehicleHelper vehicleHelper;
+    private final VehicleClassService vehicleClassService;
 
-    public VehicleResponse addVehicle(VehicleRequest vehicleRequest) {
-        if(vehicleRepository.existsByPlate(vehicleRequest.getPlate())){
-            throw new VehicleAlreadyExistException(vehicleRequest.getPlate()+" plakalı araç sistemde kayıtlı.");
+    @Transactional
+    public VehicleResponse addVehicle(VehicleRequest request) {
+        if (vehicleRepository.existsByPlate(request.getPlate())) {
+            throw new VehicleAlreadyExistException(request.getPlate() + " plakalı araç sistemde kayıtlı.");
         }
-        Vehicle vehicle = vehicleHelper.convertToEntity(vehicleRequest);
+
+        VehicleClass vehicleClass = vehicleClassService.getVehicleClassEntity(request.getVehicleClassId());
+
+        Vehicle vehicle = vehicleHelper.convertToEntity(request, vehicleClass);
+
         Vehicle savedVehicle = vehicleRepository.save(vehicle);
         return vehicleHelper.convertToResponse(savedVehicle);
     }
+
     public Vehicle getVehicleEntity(String plate) {
         return vehicleRepository.findByPlate(plate)
                 .orElseThrow(() -> new VehicleNotFoundException(plate + " plakalı araç bulunamadı"));
@@ -40,27 +47,32 @@ public class VehicleService {
     }
 
     public List<VehicleResponse> getAllVehicles() {
-        return vehicleRepository.findAll()
+        return vehicleRepository.findAllByOrderByPlateAsc()
                 .stream()
                 .map(vehicleHelper::convertToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    @Transactional
     public VehicleResponse updateVehicle(String plate, VehicleRequest request) {
         Vehicle existingVehicle = getVehicleEntity(plate);
 
+        VehicleClass vehicleClass = vehicleClassService.getVehicleClassEntity(request.getVehicleClassId());
+
         existingVehicle.setOwnerName(request.getOwnerName());
-        existingVehicle.setVehicleClass(request.getVehicleClass());
+        existingVehicle.setVehicleClass(vehicleClass);
         existingVehicle.setBalance(request.getBalance());
 
         Vehicle updatedVehicle = vehicleRepository.save(existingVehicle);
-
         return vehicleHelper.convertToResponse(updatedVehicle);
     }
 
-    public VehicleResponse loadBalance(String plate, Double amount) {
+    @Transactional
+    public VehicleResponse loadBalance(String plate, BigDecimal amount) {
         Vehicle existingVehicle = getVehicleEntity(plate);
-        existingVehicle.setBalance(existingVehicle.getBalance() + amount);
+
+        existingVehicle.setBalance(existingVehicle.getBalance().add(amount));
+
         Vehicle updatedVehicle = vehicleRepository.save(existingVehicle);
         return vehicleHelper.convertToResponse(updatedVehicle);
     }
